# databricks_sample

./: CLAUDE.md  README.md  databricks.yml  main.py  pyproject.toml
query/: data-pipeline-get-started.dbquery.ipynb
sandbox/: 01_quick-start.py  02_import-visualize-data.py  03_create-table.py  04_etl-quick-start.py
sandbox/data-pipeline-get-started/transformations/: my_transformation.py
